# fancychunk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bench_embedders.py  bench_factories.linux.txt  bench_pipeline.linux.txt  bench_pipeline.py  bench_qwen3.py  bench_sat_batching.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  _chunkers.py  _metrics.py  _qasper.py  embedders.py  factories.py  latency.py  pipeline.py  qwen3.py  requirements.txt  retrieval.py  sat-model-selection.md  sat_batching.py  structure_first_spike.md  structure_first_spike.py
benchmarks/results/: README.md  embedders.linux.txt
docs/specs/: 00-pipeline-overview.md  01-sentence-splitting.md  02-chunklet-grouping.md  03-semantic-chunking.md  04-late-chunking.md  05-contextual-headings.md  06-structural-chunking.md  README.md
docs/specs/acceptance/: checklist.md
docs/specs/contracts/: public-api.md
docs/specs/provenance/: sources.md
docs/specs/test-vectors/: 01-sentence-splitting.md  02-chunklet-grouping.md  03-semantic-chunking.md  04-late-chunking.md  05-contextual-headings.md
examples/embedders/: README.md  huggingface_offsets.py  qwen3_mlx.py  remote_http.py
src/fancychunk/: __init__.py  _constants.py  _markdown.py  _segmenter.py  _telemetry.py  _typing.py  chunklets.py  chunks.py  document.py  errors.py  headings.py  late_chunking.py  segmenters.py  sentences.py  structure_first.py
src/fancychunk/embedders/: __init__.py  _noop.py  _pooled.py
tests/: _fake_embedder.py  conftest.py  test_bert.py  test_chunklets.py  test_chunks.py  test_concurrency.py  test_document.py  test_embedders.py  test_headings.py  test_late_chunking.py  test_pipeline.py  test_placeholder.py  test_sat.py  test_segmenter_batching.py  test_segmenters.py  test_sentences.py  test_structure_first.py  test_telemetry.py
