[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "fancychunk"
version = "0.1.0"
description = "Text chunking for retrieval-augmented generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "fancychunk authors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "numpy>=1.26",
    "markdown-it-py>=3.0",
    "wtpsplit-lite>=0.1",
    # Tracing/observability — API only, no SDK. Calls are no-ops
    # until the caller's application configures an SDK.
    "opentelemetry-api>=1.20",
]

[project.optional-dependencies]
# ``pip install fancychunk[embedders]`` installs the deps for the
# bundled fancychunk.embedders module (fastest / fast / medium / high).
# Skip this extra if you BYO embedder.
embedders = [
    "torch>=2.0",
    "transformers>=4.40",
    # MLX backend on Apple Silicon — 2-4× faster than torch + MPS for
    # the Qwen3 family. Skipped on Linux/Windows via PEP 508 marker.
    "mlx>=0.30; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-embeddings>=0.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1",
    # SDK is dev-only: tests assert spans via the in-memory exporter.
    "opentelemetry-sdk>=1.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fancychunk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
include = ["src/fancychunk"]
# Bundled embedders subpackage uses HuggingFace transformers, which
# ships no strict type stubs — drop to standard mode for that path.
exclude = ["src/fancychunk/embedders"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
