[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "fancychunk"
version = "0.6.2"
description = "Text chunking for retrieval-augmented generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "fancychunk authors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "numpy>=1.26",
    "markdown-it-py>=3.0",
    "wtpsplit-lite>=0.1",
    # Tracing/observability — API only, no SDK. Calls are no-ops
    # until the caller's application configures an SDK.
    "opentelemetry-api>=1.20",
]

# Backend extras for the bundled embedders. Pick at least one if
# you want the real embedders (qwen3_600m, bge_m3, qwen3_4b,
# qwen3_8b). The base install supports structural-only chunking via
# embedders.noop(); the heavy ML deps stay opt-in.
[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "transformers>=4.40",
]
mlx = [
    # macOS arm64 only — PEP 508 markers no-op on other platforms.
    "mlx>=0.30; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-embeddings>=0.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
all = [
    "torch>=2.0",
    "transformers>=4.40",
    "mlx>=0.30; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-embeddings>=0.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1",
    # SDK is dev-only: tests assert spans via the in-memory exporter.
    "opentelemetry-sdk>=1.20",
    # Pull the full embedder stack in for development so integration
    # tests (FANCYCHUNK_TEST_USE_EMBEDDERS=1) and ad-hoc work hit
    # both backends without a separate install step. End users
    # install via the [torch] / [mlx] / [all] extras above.
    "torch>=2.0",
    "transformers>=4.40",
    "mlx>=0.30; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-embeddings>=0.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fancychunk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
include = ["src/fancychunk"]
# Bundled embedders subpackage uses HuggingFace transformers, which
# ships no strict type stubs — drop to standard mode for that path.
exclude = ["src/fancychunk/embedders"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
